Remove 'volume' from short story semantics, and change <section> to <article>

--- a/src/epub/text/christmas-day.xhtml
+++ b/src/epub/text/christmas-day.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="christmas-day" epub:type="volume se:short-story">
+		<article id="christmas-day" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">Christmas Day</h2>
 				<blockquote epub:type="epigraph z3998:poem">
@@ -120,6 +120,6 @@
 			<p>After the dance was concluded the whole party was entertained with brawn and beef and stout home-brewed. The squire himself mingled among the rustics, and was received with awkward demonstrations of deference and regard. It is true I perceived two or three of the younger peasants, as they were raising their tankards to their mouths, when the squire’s back was turned making something of a grimace, and giving each other the wink; but the moment they caught my eye they pulled grave faces and were exceedingly demure. With Master Simon, however, they all seemed more at their ease. His varied occupations and amusements had made him well known throughout the neighborhood. He was a visitor at every farmhouse and cottage, gossiped with the farmers and their wives, romped with their daughters, and, like that type of a vagrant bachelor, the humblebee, tolled the sweets from all the rosy lips of the country round.</p>
 			<p>The bashfulness of the guests soon gave way before good cheer and affability. There is something genuine and affectionate in the gayety of the lower orders when it is excited by the bounty and familiarity of those above them; the warm glow of gratitude enters into their mirth, and a kind word or a small pleasantry frankly uttered by a patron gladdens the heart of the dependant more than oil and wine. When the squire had retired the merriment increased, and there was much joking and laughter, particularly between Master Simon and a hale, ruddy-faced, white-headed farmer who appeared to be the wit of the village; for I observed all his companions to wait with open months for his retorts, and burst into a gratuitous laugh before they could well understand them.</p>
 			<p>The whole house indeed seemed abandoned to merriment: as I passed to my room to dress for dinner, I heard the sound of music in a small court, and, looking through a window that commanded it, I perceived a band of wandering musicians with pandean pipes and tambourine; a pretty coquettish housemaid was dancing a jig with a smart country lad, while several of the other servants were looking on. In the midst of her sport the girl caught a glimpse of my face at the window, and, coloring up, ran off with an air of roguish affected confusion.</p>
-		</section>
+		</article>
 	</body>
 </html>
