--- a/src/epub/text/christmas-eve.xhtml
+++ b/src/epub/text/christmas-eve.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="christmas-eve" epub:type="volume se:short-story">
+		<article id="christmas-eve" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title z3998:event">Christmas Eve</h2>
 				<blockquote epub:type="epigraph z3998:poem">
@@ -139,6 +139,6 @@
 			<p>The song might or might not have been intended in compliment to the fair Julia, for so I found his partner was called; she, however, was certainly unconscious of any such application, for she never looked at the singer, but kept her eyes cast upon the floor. Her face was suffused, it is true, with a beautiful blush, and there was a gentle heaving of the bosom, but all that was doubtless caused by the exercise of the dance; indeed, so great was her indifference that she amused herself with plucking to pieces a choice bouquet of hothouse flowers, and by the time the song was concluded the nosegay lay in ruins on the floor.</p>
 			<p>The party now broke up for the night with the kindhearted old custom of shaking hands. As I passed through the hall on my way to my chamber, the dying embers of the <span epub:type="z3998:event">Yule</span> clog still sent forth a dusky glow, and had it not been the season when “no spirit dares stir abroad,” I should have been half tempted to steal from my room at midnight and peep whether the fairies might not be at their revels about the hearth.</p>
 			<p>My chamber was in the old part of the mansion, the ponderous furniture of which might have been fabricated in the days of the giants. The room was panelled, with cornices of heavy carved work, in which flowers and grotesque faces were strangely intermingled, and a row of black-looking portraits stared mournfully at me from the walls. The bed was of rich though faded damask, with a lofty tester, and stood in a niche opposite a bow window. I had scarcely got into bed when a strain of music seemed to break forth in the air just below the window. I listened, and found it proceeded from a band which I concluded to be the Waits from some neighboring village. They went round the house, playing under the windows. I drew aside the curtains to hear them more distinctly. The moonbeams fell through the upper part of the casement; partially lighting up the antiquated apartment. The sounds, as they receded, became more soft and aerial, and seemed to accord with the quiet and moonlight. I listened and listened⁠—they became more and more tender and remote, and, as they gradually died away, my head sunk upon the pillow and I fell asleep.</p>
-		</section>
+		</article>
 	</body>
 </html>
