--- a/src/epub/text/christmas.xhtml
+++ b/src/epub/text/christmas.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="westminster-abbey" epub:type="volume se:short-story">
+		<article id="westminster-abbey" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title z3998:event">Christmas</h2>
 				<blockquote epub:type="epigraph">
@@ -63,6 +63,6 @@
 			<p>Amidst the general call to happiness, the bustle of the spirits, and stir of the affections which prevail at this period what bosom can remain insensible? It is, indeed, the season of regenerated feeling⁠—the season for kindling not merely the fire of hospitality in the hall, but the genial flame of charity in the heart.</p>
 			<p>The scene of early love again rises green to memory beyond the sterile waste of years; and the idea of home, fraught with the fragrance of home-dwelling joys, reanimates the drooping spirit, as the Arabian breeze will sometimes waft the freshness of the distant fields to the weary pilgrim of the desert.</p>
 			<p>Stranger and sojourner as I am in the land, though for me no social hearth may blaze, no hospitable roof throw open its doors, nor the warm grasp of friendship welcome me at the threshold, yet I feel the influence of the season beaming into my soul from the happy looks of those around me. Surely happiness is reflective, like the light of heaven, and every countenance, bright with smiles and glowing with innocent enjoyment, is a mirror transmitting to others the rays of a supreme and ever-shining benevolence. He who can turn churlishly away from contemplating the felicity of his fellow-beings, and can sit down darkling and repining in his loneliness when all around is joyful, may have his moments of strong excitement and selfish gratification, but he wants the genial and social sympathies which constitute the charm of a merry <span epub:type="z3998:event">Christmas</span>.</p>
-		</section>
+		</article>
 	</body>
 </html>
