--- a/src/epub/text/lenvoy.xhtml
+++ b/src/epub/text/lenvoy.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="lenvoy" epub:type="volume se:short-story">
+		<article id="lenvoy" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">L’Envoy<a href="endnotes.xhtml#note-60" id="noteref-60" epub:type="noteref">60</a></h2>
 				<blockquote epub:type="epigraph z3998:poem">
@@ -29,6 +29,6 @@
 			<p>Thus perplexed by the advice of his friends, who each in turn closed some particular path, but left him all the world beside to range in, he found that to follow all their counsels would, in fact, be to stand still. He remained for a time sadly embarrassed, when all at once the thought struck him to ramble on as he had begun; that his work being miscellaneous and written for different humors, it could not be expected that anyone would be pleased with the whole; but that if it should contain something to suit each reader, his end would be completely answered. Few guests sit down to a varied table with an equal appetite for every dish. One has an elegant horror of a roasted pig; another holds a curry or a devil in utter abomination; a third cannot tolerate the ancient flavor of venison and wildfowl; and a fourth, of truly masculine stomach, looks with sovereign contempt on those knickknacks here and there dished up for the ladies. Thus each article is in condemned in its turn, and yet amidst this variety of appetites seldom does a dish go away from the table without being tasted and relished by someone or other of the guests.</p>
 			<p>With these considerations he ventures to serve up this second volume in the same heterogeneous way with his first; simply requesting the reader, if he should find here and there something to please him, to rest assured that it was written expressly for intelligent readers like himself; but entreating him, should he find anything to dislike, to tolerate it, as one of those articles which the author has been obliged to write for readers of a less refined taste.</p>
 			<p>To be serious: The author is conscious of the numerous faults and imperfections of his work, and well aware how little he is disciplined and accomplished in the arts of authorship. His deficiencies are also increased by a diffidence arising from his peculiar situation. He finds himself writing in a strange land, and appearing before a public which he has been accustomed from childhood to regard with the highest feelings of awe and reverence. He is full of solicitude to deserve their approbation, yet finds that very solicitude continually embarrassing his powers and depriving him of that case and confidence which are necessary to successful exertion. Still, the kindness with which he is treated encourages him to go on, hoping that in time he may acquire a steadier footing; and thus he proceeds, half venturing, half shrinking, surprised at his own good-fortune and wondering at his own temerity.</p>
-		</section>
+		</article>
 	</body>
 </html>
