--- a/src/epub/text/little-britain.xhtml
+++ b/src/epub/text/little-britain.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="little-britain" epub:type="volume se:short-story">
+		<article id="little-britain" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">Little Britain</h2>
 				<blockquote epub:type="epigraph">
@@ -45,6 +45,6 @@
 			<p>Thus is this little territory torn by factions and internal dissensions, like the great empire whose name it bears; and what will be the result would puzzle the apothecary himself, with all his talent at prognostics, to determine, though I apprehend that it will terminate in the total downfall of genuine John Bullism.</p>
 			<p>The immediate effects are extremely unpleasant to me. Being a single man, and, as I observed before, rather an idle good-for-nothing personage, I have been considered the only gentleman by profession in the place. I stand therefore in high favor with both parties, and have to hear all their cabinet counsels and mutual backbitings. As I am too civil not to agree with the ladies on all occasions, I have committed myself most horribly with both parties by abusing their opponents. I might manage to reconcile this to my conscience, which is a truly accommodating one, but I cannot to my apprehension: if the Lambs and Trotters ever come to a reconciliation and compare notes, I am ruined!</p>
 			<p>I have determined, therefore, to beat a retreat in time, and am actually looking out for some other nest in this great city where old <span epub:type="z3998:nationality">English</span> manners are still kept up, where <span epub:type="z3998:nationality">French</span> is neither eaten, drunk, danced, nor spoken, and where there are no fashionable families of retired tradesmen. This found, I will, like a veteran rat, hasten away before I have an old house about my ears, bid a long, though a sorrowful adieu to my present abode, and leave the rival factions of the Lambs and the Trotters to divide the distracted empire of <b>Little Britain</b>.</p>
-		</section>
+		</article>
 	</body>
 </html>
