--- a/src/epub/text/london-antiques.xhtml
+++ b/src/epub/text/london-antiques.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="london-antiques" epub:type="volume se:short-story">
+		<article id="london-antiques" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">London Antiques</h2>
 				<blockquote epub:type="epigraph z3998:poem">
@@ -47,6 +47,6 @@
 				<hr/>
 				<p>For the amusement of such as have been interested by the preceding sketch, taken down from my own observation, and who may wish to know a little more about the mysteries of <span epub:type="z3998:place">London</span>, I subjoin a modicum of local history put into my hands by an odd-looking old gentleman, in a small brown wig and a snuff-colored coat, with whom I became acquainted shortly after my visit to the Charter House. I confess I was a little dubious at first whether it was not one of those apocryphal tales often passed off upon inquiring travellers like myself, and which have brought our general character for veracity into such unmerited reproach. On making proper inquiries, however, I have received the most satisfactory assurances of the author’s probity, and indeed have been told that he is actually engaged in a full and particular account of the very interesting region in which he resides, of which the following may be considered merely as a foretaste.</p>
 			</section>
-		</section>
+		</article>
 	</body>
 </html>
