--- a/src/epub/text/rip-van-winkle.xhtml
+++ b/src/epub/text/rip-van-winkle.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="rip-van-winkle" epub:type="volume se:short-story">
+		<article id="rip-van-winkle" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">
 					<span>Rip Van Winkle</span>
@@ -111,6 +111,6 @@
 				<p>In old times, say the <span epub:type="z3998:nationality">Indian</span> traditions, there was a kind of <i xml:lang="sjw">manitou</i> or “spirit,” who kept about the wildest recesses of the Catskill mountains, and took a mischievous pleasure in wreaking all kind of evils and vexations upon the red men. Sometimes he would assume the form of a bear, a panther, or a deer, lead the bewildered hunter a weary chase through tangled forests and among ragged rocks, and then spring off with a loud ho! ho! leaving him aghast on the brink of a beetling precipice or raging torrent.</p>
 				<p>The favorite abode of this <i xml:lang="sjw">manitou</i> is still shown. It is a rock or cliff on the loneliest port of the mountains, and, from the flowering vines which clamber about it, and the wild flowers which abound in its neighborhood, is known by the name of the Garden Rock. Near the foot of it is a small lake, the haunt of the solitary bittern, with water-snakes basking in the sun on the leaves of the pond-lilies which lie on the surface. This place was held in great awe by the <span epub:type="z3998:nationality">Indians</span>, insomuch that the boldest hunter would not pursue his game within its precincts. Once upon a time, however, a hunter who had lost his way penetrated to the Garden Rock, where he beheld a number of gourds placed in the crotches of trees. One of these he seized and made off with it, but in the hurry of his retreat he let it fall among the rocks, when a great stream gushed forth, which washed him away and swept him down precipices, where he was dished to pieces, and the stream made its way to the Hudson, and continues to flow to the present day, being the identical stream known by the name of the Kaaterskill.</p>
 			</section>
-		</section>
+		</article>
 	</body>
 </html>
