--- a/src/epub/text/roscoe.xhtml
+++ b/src/epub/text/roscoe.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="roscoe" epub:type="volume se:short-story">
+		<article id="roscoe" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">Roscoe</h2>
 				<blockquote epub:type="epigraph z3998:verse">
@@ -76,6 +76,6 @@
 					<span class="i2">And kindred spirits meet to part no more.</span>
 				</p>
 			</blockquote>
-		</section>
+		</article>
 	</body>
 </html>
