--- a/src/epub/text/the-angler.xhtml
+++ b/src/epub/text/the-angler.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-angler" epub:type="volume se:short-story">
+		<article id="the-angler" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">The Angler</h2>
 				<blockquote epub:type="epigraph z3998:poem">
@@ -83,6 +83,6 @@
 			<p>On inquiring further about him, I learnt that he was a universal favorite in the village and the oracle of the taproom, where he delighted the rustics with his songs, and, like Sindbad, astonished them with his stories of strange lands and shipwrecks and sea-fights. He was much noticed too by gentlemen sportsmen of the neighborhood, had taught several of them the art of angling, and was a privileged visitor to their kitchens. The whole tenor of his life was quiet and inoffensive, being principally passed about the neighboring streams when the weather and season were favorable; and at other times he employed himself at home, preparing his fishing-tackle for the next campaign or manufacturing rods, nets, and flies for his patrons and pupils among the gentry.</p>
 			<p>He was a regular attendant at church on Sundays, though he generally fell asleep during the sermon. He had made it his particular request that when he died he should be buried in a green spot which he could see from his seat in church, and which he had marked out ever since he was a boy, and had thought of when far from home on the raging sea in danger of being food for the fishes: it was the spot where his father and mother had been buried.</p>
 			<p>I have done, for I fear that my reader is growing weary, but I could not refrain from drawing the picture of this worthy “brother of the angle,” who has made me more than ever in love with the theory, though I fear I shall never be adroit in the practice, of his art; and I will conclude this rambling sketch in the words of honest Izaak Walton, by craving the blessing of <abbr>St.</abbr> Peter’s Master upon my reader, “and upon all that are true lovers of virtue, and dare trust in His providence, and be quiet, and go a-angling.”</p>
-		</section>
+		</article>
 	</body>
 </html>
