--- a/src/epub/text/the-boars-head-tavern-eastcheap.xhtml
+++ b/src/epub/text/the-boars-head-tavern-eastcheap.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-boars-head-tavern-eastcheap" epub:type="volume se:short-story">
+		<article id="the-boars-head-tavern-eastcheap" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">
 					<span>The Boar’s Head Tavern, Eastcheap</span>
@@ -48,6 +48,6 @@
 			<p>I now called to mind that in the eagerness of my recondite investigation, I was keeping the poor man from his dinner. My bowels yearned with sympathy, and putting in his hand a small token of my gratitude and goodness, I departed with a hearty benediction on him, Dame Honeyball, and the parish club of Crooked Lane⁠—not forgetting my shabby, but sententious friend, in the oilcloth hat and copper nose.</p>
 			<p>Thus have I given a “tedious brief” account of this interesting research, for which, if it prove too short and unsatisfactory, I can only plead my inexperience in this branch of literature, so deservedly popular at the present day. I am aware that a more skilful illustrator of the immortal bard would have swelled the materials I have touched upon to a good merchantable bulk, comprising the biographies of William Walworth, Jack Straw, and Robert Preston; some notice of the eminent fishmongers of <abbr>St.</abbr> Michael’s; the history of Eastcheap, great and little; private anecdotes of Dame Honeyball and her pretty daughter, whom I have not even mentioned; to say nothing of a damsel tending the breast of lamb (and whom, by the way, I remarked to be a comely lass with a neat foot and ankle);⁠—the whole enlivened by the riots of Wat Tyler, and illuminated by the great fire of <span epub:type="z3998:place">London</span>.</p>
 			<p>All this I leave, as a rich mine, to be worked by future commentators, nor do I despair of seeing the tobacco-box, and the “parcel-gilt goblet” which I have thus brought to light the subject of future engravings, and almost as fruitful of voluminous dissertations and disputes as the shield of Achilles or the far-famed Portland Vase.</p>
-		</section>
+		</article>
 	</body>
 </html>
