--- a/src/epub/text/the-broken-heart.xhtml
+++ b/src/epub/text/the-broken-heart.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-broken-heart" epub:type="volume se:short-story">
+		<article id="the-broken-heart" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">The Broken Heart</h2>
 				<blockquote epub:type="epigraph z3998:poem">
@@ -75,6 +75,6 @@
 					<span class="i1">From her own loved island of sorrow!</span>
 				</p>
 			</blockquote>
-		</section>
+		</article>
 	</body>
 </html>
