--- a/src/epub/text/the-christmas-dinner.xhtml
+++ b/src/epub/text/the-christmas-dinner.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-christmas-dinner" epub:type="volume se:short-story">
+		<article id="the-christmas-dinner" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">The Christmas Dinner</h2>
 				<blockquote epub:type="epigraph z3998:poem">
@@ -146,6 +146,6 @@
 			<p>The worthy squire contemplated these fantastic sports and this resurrection of his old wardrobe with the simple relish of childish delight. He stood chuckling and rubbing his hands, and scarcely hearing a word the parson said, notwithstanding that the latter was discoursing most authentically on the ancient and stately dance of the Pavon, or peacock, from which he conceived the minuet to be derived.<a href="endnotes.xhtml#note-42" id="noteref-42" epub:type="noteref">42</a> For my part, I was in a continual excitement from the varied scenes of whim and innocent gayety passing before me. It was inspiring to see wild-eyed frolic and warmhearted hospitality breaking out from among the chills and glooms of winter, and old age throwing off his apathy and catching once more the freshness of youthful enjoyment. I felt also an interest in the scene from the consideration that these fleeting customs were posting fast into oblivion, and that this was perhaps the only family in <span epub:type="z3998:place">England</span> in which the whole of them was still punctiliously observed. There was a quaintness, too, mingled with all this revelry that gave it a peculiar zest: it was suited to the time and place; and as the old manor-house almost reeled with mirth and wassail, it seemed echoing back the joviality of long departed years.<a href="endnotes.xhtml#note-43" id="noteref-43" epub:type="noteref">43</a></p>
 			<p>But enough of <span epub:type="z3998:event">Christmas</span> and its gambols; it is time for me to pause in this garrulity. Methinks I hear the questions asked by my graver readers, “To what purpose is all this? how is the world to be made wiser by this talk?” Alas! is there not wisdom enough extant for the instruction of the world? And if not, are there not thousands of abler pens laboring for its improvement? It is so much pleasanter to please than to instruct⁠—to play the companion rather than the preceptor.</p>
 			<p>What, after all, is the mite of wisdom that I could throw into the mass of knowledge! or how am I sure that my sagest deductions may be safe guides for the opinions of others? But in writing to amuse, if I fail the only evil is in my own disappointment. If, however, I can by any lucky chance, in these days of evil, rub out one wrinkle from the brow of care or beguile the heavy heart of one moment of sorrow; if I can now and then penetrate through the gathering film of misanthropy, prompt a benevolent view of human nature, and make my reader more in good-humor with his fellow-beings and himself⁠—surely, surely, I shall not then have written entirely in vain.</p>
-		</section>
+		</article>
 	</body>
 </html>
