--- a/src/epub/text/the-inn-kitchen.xhtml
+++ b/src/epub/text/the-inn-kitchen.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-inn-kitchen" epub:type="volume se:short-story">
+		<article id="the-inn-kitchen" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">The Inn Kitchen</h2>
 				<blockquote epub:type="epigraph z3998:verse">
@@ -20,6 +20,6 @@
 			<p>Many of the company were furnished with pipes, and most of them with some kind of evening potation. I found their mirth was occasioned by anecdotes which a little swarthy Frenchman, with a dry weazen face and large whiskers, was giving of his love-adventures; at the end of each of which there was one of those bursts of honest unceremonious laughter in which a man indulges in that temple of true liberty, an inn.</p>
 			<p>As I had no better mode of getting through a tedious blustering evening, I took my seat near the stove, and listened to a variety of travellers’ tales, some very extravagant and most very dull. All of them, however, have faded from my treacherous memory except one, which I will endeavor to relate. I fear, however, it derived its chief zest from the manner in which it was told, and the peculiar air and appearance of the narrator. He was a corpulent old <span epub:type="z3998:nationality">Swiss</span>, who had the look of a veteran traveller. He was dressed in a tarnished green travelling-jacket, with a broad belt round his waist, and a pair of overalls with buttons from the hips to the ankles. He was of a full rubicund countenance, with a double chin, aquiline nose, and a pleasant twinkling eye. His hair was light, and curled from under an old green velvet travelling-cap stuck on one side of his head. He was interrupted more than once by the arrival of guests or the remarks of his auditors, and paused now and then to replenish his pipe; at which times he had generally a roguish leer and a sly joke for the buxom kitchen-maid.</p>
 			<p>I wish my readers could imagine the old fellow lolling in a huge armchair, one arm akimbo, the other holding a curiously twisted tobacco-pipe formed of genuine <i xml:lang="fr">ecume de mer</i>, decorated with silver chain and silken tassel, his head cocked on one side, and a whimsical cut of the eye occasionally as he related the following story.</p>
-		</section>
+		</article>
 	</body>
 </html>
