--- a/src/epub/text/the-legend-of-sleepy-hollow.xhtml
+++ b/src/epub/text/the-legend-of-sleepy-hollow.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-legend-of-sleepy-hollow" epub:type="volume se:short-story">
+		<article id="the-legend-of-sleepy-hollow" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">The Legend of Sleepy Hollow</h2>
 				<p epub:type="bridgehead">Found among the papers of the late Diedrich Knickerbocker.</p>
@@ -112,6 +112,6 @@
 					</p>
 				</footer>
 			</section>
-		</section>
+		</article>
 	</body>
 </html>
