--- a/src/epub/text/the-mutability-of-literature.xhtml
+++ b/src/epub/text/the-mutability-of-literature.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-mutability-of-literature" epub:type="volume se:short-story">
+		<article id="the-mutability-of-literature" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">
 					<span>The Mutability of Literature</span>
@@ -52,6 +52,6 @@
 			<p>I confess that I felt somewhat nettled at this rudeness, which, however, I pardoned on account of his having flourished in a less polished age. I determined, nevertheless, not to give up my point.</p>
 			<p>“Yes,” resumed I positively, “a poet; for of all writers he has the best chance for immortality. Others may write from the head, but he writes from the heart, and the heart will always understand him. He is the faithful portrayer of nature, whose features are always the same and always interesting. Prose writers are voluminous and unwieldy; their pages crowded with commonplaces, and their thoughts expanded into tediousness. But with the true poet everything is terse, touching, or brilliant. He gives the choicest thoughts in the choicest language. He illustrates them by everything that he sees most striking in nature and art. He enriches them by pictures of human life, such as it is passing before him. His writings, therefore, contain the spirit, the aroma, if I may use the phrase, of the age in which he lives. They are caskets which enclose within a small compass the wealth of the language⁠—its family jewels, which are thus transmitted in a portable form to posterity. The setting may occasionally be antiquated, and require now and then to be renewed, as in the case of Chaucer; but the brilliancy and intrinsic value of the gems continue unaltered. Cast a look back over the long reach of literary history. What vast valleys of dullness, filled with monkish legends and academical controversies! What bogs of theological speculations! What dreary wastes of metaphysics! Here and there only do we behold the heaven-illumined bards, elevated like beacons on their widely-separated heights, to transmit the pure light of poetical intelligence from age to age.”<a href="endnotes.xhtml#note-23" id="noteref-23" epub:type="noteref">23</a></p>
 			<p>I was just about to launch forth into eulogiums upon the poets of the day when the sudden opening of the door caused me to turn my head. It was the verger, who came to inform me that it was time to close the library. I sought to have a parting word with the quarto, but the worthy little tome was silent; the clasps were closed: and it looked perfectly unconscious of all that had passed. I have been to the library two or three times since, and have endeavored to draw it into further conversation, but in vain; and whether all this rambling colloquy actually took place, or whether it was another of those old daydreams to which I am subject, I have never, to this moment, been able to discover.</p>
-		</section>
+		</article>
 	</body>
 </html>
