--- a/src/epub/text/the-pride-of-the-village.xhtml
+++ b/src/epub/text/the-pride-of-the-village.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-pride-of-the-village" epub:type="volume se:short-story">
+		<article id="the-pride-of-the-village" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">The Pride of the Village</h2>
 				<blockquote epub:type="epigraph z3998:poem">
@@ -63,6 +63,6 @@
 			<p>Suddenly the clang of hoofs was heard: a horseman galloped to the cottage; he dismounted before the window; the poor girl gave a faint exclamation and sunk back in her chair: it was her repentant lover. He rushed into the house and flew to clasp her to his bosom; but her wasted form, her deathlike countenance⁠—so wan, yet so lovely in its desolation⁠—smote him to the soul, and he threw himself in agony at her feet. She was too faint to rise⁠—she attempted to extend her trembling hand⁠—her lips moved as if she spoke, but no word was articulated; she looked down upon him with a smile of unutterable tenderness, and closed her eyes forever.</p>
 			<p>Such are the particulars which I gathered of this village story. They are but scanty, and I am conscious have little novelty to recommend them. In the present rage also for strange incident and high-seasoned narrative they may appear trite and insignificant, but they interested me strongly at the time; and, taken in connection with the affecting ceremony which I had just witnessed, left a deeper impression on my mind than many circumstances of a more striking nature. I have passed through the place since, and visited the church again from a better motive than mere curiosity. It was a wintry evening: the trees were stripped of their foliage, the churchyard looked naked and mournful, and the wind rustled coldly through the dry grass. Evergreens, however, had been planted about the grave of the village favorite, and osiers were bent over it to keep the turf uninjured.</p>
 			<p>The church-door was open and I stepped in. There hung the chaplet of flowers and the gloves, as on the day of the funeral: the flowers were withered, it is true, but care seemed to have been taken that no dust should soil their whiteness. I have seen many monuments where art has exhausted its powers to awaken the sympathy of the spectator, but I have met with none that spoke more touchingly to my heart than this simple but delicate memento of departed innocence.</p>
-		</section>
+		</article>
 	</body>
 </html>
