--- a/src/epub/text/the-spectre-bridegroom.xhtml
+++ b/src/epub/text/the-spectre-bridegroom.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-spectre-bridegroom" epub:type="volume se:short-story">
+		<article id="the-spectre-bridegroom" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">
 					<span>The Spectre Bridegroom</span>
@@ -83,6 +83,6 @@
 			<p>The mystery was soon cleared up. The cavalier (for, in truth, as you must have known all the while, he was no goblin) announced himself as Sir Herman Von Starkenfaust. He related his adventure with the young count. He told how he had hastened to the castle to deliver the unwelcome tidings, but that the eloquence of the baron had interrupted him in every attempt to tell his tale. How the sight of the bride had completely captivated him and that to pass a few hours near her he had tacitly suffered the mistake to continue. How he had been sorely perplexed in what way to make a decent retreat, until the baron’s goblin stories had suggested his eccentric exit. How, fearing the feudal hostility of the family, he had repeated his visits by stealth⁠—had haunted the garden beneath the young lady’s window⁠—had wooed⁠—had won⁠—had borne away in triumph⁠—and, in a word, had wedded the fair.</p>
 			<p>Under any other circumstances the baron would have been inflexible, for he was tenacious of paternal authority and devoutly obstinate in all family feuds; but he loved his daughter; he had lamented her as lost; he rejoiced to find her still alive; and, though her husband was of a hostile house, yet, thank Heaven! he was not a goblin. There was something, it must be acknowledged, that did not exactly accord with his notions of strict veracity in the joke the knight had passed upon him of his being a dead man; but several old friends present, who had served in the wars, assured him that every stratagem was excusable in love, and that the cavalier was entitled to especial privilege, having lately served as a trooper.</p>
 			<p>Matters, therefore, were happily arranged. The baron pardoned the young couple on the spot. The revels at the castle were resumed. The poor relations overwhelmed this new member of the family with loving-kindness; he was so gallant, so generous⁠—and so rich. The aunts, it is true, were somewhat scandalized that their system of strict seclusion and passive obedience should be so badly exemplified, but attributed it all to their negligence in not having the windows grated. One of them was particularly mortified at having her marvellous story marred, and that the only spectre she had ever seen should turn out a counterfeit; but the niece seemed perfectly happy at having found him substantial flesh and blood. And so the story ends.</p>
-		</section>
+		</article>
 	</body>
 </html>
