--- a/src/epub/text/the-stage-coach.xhtml
+++ b/src/epub/text/the-stage-coach.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-stage-coach" epub:type="volume se:short-story">
+		<article id="the-stage-coach" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">The Stage Coach</h2>
 				<blockquote epub:type="epigraph z3998:song">
@@ -54,6 +54,6 @@
 				</p>
 			</blockquote>
 			<p>I had not been long at the inn when a post-chaise drove up to the door. A young gentleman stepped out, and by the light of the lamps I caught a glimpse of a countenance which I thought I knew. I moved forward to get a nearer view, when his eye caught mine. I was not mistaken; it was Frank Bracebridge, a sprightly, good-humored young fellow with whom I had once travelled on the Continent. Our meeting was extremely cordial, for the countenance of an old fellow-traveller always brings up the recollection of a thousand pleasant scenes, odd adventures, and excellent jokes. To discuss all these in a transient interview at an inn was impossible; and, finding that I was not pressed for time and was merely making a tour of observation, he insisted that I should give him a day or two at his father’s country-seat, to which he was going to pass the holidays and which lay at a few miles’ distance. “It is better than eating a solitary <span epub:type="z3998:event">Christmas</span> dinner at an inn,” said he, “and I can assure you of a hearty welcome in something of the old-fashioned style.” His reasoning was cogent, and I must confess the preparation I had seen for universal festivity and social enjoyment had made me feel a little impatient of my loneliness. I closed, therefore, at once with his invitation; the chaise drove up to the door, and in a few moments I was on my way to the family mansion of the Bracebridges.</p>
-		</section>
+		</article>
 	</body>
 </html>
