--- a/src/epub/text/the-voyage.xhtml
+++ b/src/epub/text/the-voyage.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-voyage" epub:type="volume se:short-story">
+		<article id="the-voyage" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">The Voyage</h2>
 				<blockquote epub:type="epigraph z3998:poem">
@@ -51,6 +51,6 @@
 			<p>From that time, until the moment of arrival, it was all feverish excitement. The ships of war, that prowled like guardian giants along the coast; the headlands of <span epub:type="z3998:place">Ireland</span>, stretching out into the channel; the <span epub:type="z3998:nationality">Welsh</span> mountains towering into the clouds;⁠—all were objects of intense interest. As we sailed up the Mersey, I reconnoitred the shores with a telescope. My eye dwelt with delight on neat cottages, with their trim shrubberies and green grass-plots. I saw the mouldering ruin of an abbey overrun with ivy, and the taper spire of a village church rising from the brow of a neighboring hill;⁠—all were characteristic of <span epub:type="z3998:place">England</span>.</p>
 			<p>The tide and wind were so favorable, that the ship was enabled to come at once to her pier. It was thronged with people; some idle lookers-on; others, eager expectants of friends or relations. I could distinguish the merchant to whom the ship was consigned. I knew him by his calculating brow and restless air. His hands were thrust into his pockets; he was whistling thoughtfully, and walking to and fro, a small space having been accorded him by the crowd, in deference to his temporary importance. There were repeated cheerings and salutations interchanged between the shore and the ship, as friends happened to recognize each other. I particularly noticed one young woman of humble dress, but interesting demeanor. She was leaning forward from among the crowd; her eye hurried over the ship as it neared the shore, to catch some wished-for countenance. She seemed disappointed and sad; when I heard a faint voice call her name.⁠—It was from a poor sailor who had been ill all the voyage, and had excited the sympathy of everyone on board. When the weather was fine, his messmates had spread a mattress for him on deck in the shade, but of late his illness had so increased that he had taken to his hammock, and only breathed a wish that he might see his wife before he died. He had been helped on deck as we came up the river, and was now leaning against the shrouds, with a countenance so wasted, so pale, so ghastly, that it was no wonder even the eye of affection did not recognize him. But at the sound of his voice, her eye darted on his features: it read, at once, a whole volume of sorrow; she clasped her hands, uttered a faint shriek, and stood wringing them in silent agony.</p>
 			<p>All now was hurry and bustle. The meetings of acquaintances⁠—the greetings of friends⁠—the consultations of men of business. I alone was solitary and idle. I had no friend to meet, no cheering to receive. I stepped upon the land of my forefathers⁠—but felt that I was a stranger in the land.</p>
-		</section>
+		</article>
 	</body>
 </html>
