--- a/src/epub/text/the-widow-and-her-son.xhtml
+++ b/src/epub/text/the-widow-and-her-son.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-widow-and-her-son" epub:type="volume se:short-story">
+		<article id="the-widow-and-her-son" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">The Widow and Her Son</h2>
 				<blockquote epub:type="epigraph z3998:verse">
@@ -46,6 +46,6 @@
 			<p>The next Sunday I was at the village church, when, to my surprise, I saw the poor old woman tottering down the aisle to her accustomed seat on the steps of the altar.</p>
 			<p>She had made an effort to put on something like mourning for her son; and nothing could be more touching than this struggle between pious affection and utter poverty⁠—a black ribbon or so, a faded black handkerchief, and one or two more such humble attempts to express by outward signs that grief which passes show. When I looked round upon the storied monuments, the stately hatchments, the cold marble pomp with which grandeur mourned magnificently over departed pride, and turned to this poor widow, bowed down by age and sorrow at the altar of her God, and offering up the prayers and praises of a pious though a broken heart, I felt that this living monument of real grief was worth them all.</p>
 			<p>I related her story to some of the wealthy members of the congregation, and they were moved by it. They exerted themselves to render her situation more comfortable, and to lighten her afflictions. It was, however, but smoothing a few steps to the grave. In the course of a Sunday or two after, she was missed from her usual seat at church, and before I left the neighborhood I heard, with a feeling of satisfaction, that she had quietly breathed her last, and had gone to rejoin those she loved, in that world where sorrow is never known and friends are never parted.</p>
-		</section>
+		</article>
 	</body>
 </html>
