--- a/src/epub/text/the-wife.xhtml
+++ b/src/epub/text/the-wife.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="roscoe" epub:type="volume se:short-story">
+		<article id="roscoe" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">The Wife</h2>
 				<blockquote epub:type="epigraph z3998:poem">
@@ -59,6 +59,6 @@
 			<p>I felt Leslie’s hand tremble on my arm. He stepped forward, to hear more distinctly. His step made a noise on the gravel-walk. A bright beautiful face glanced out at the window, and vanished⁠—a light footstep-was heard⁠—and Mary came tripping forth to meet us. She was in a pretty rural dress of white; a few wild flowers were twisted in her fine hair; a fresh bloom was on her cheek; her whole countenance beamed with smiles⁠—I had never seen her look so lovely.</p>
 			<p>“My dear George,” cried she, “I am so glad you are come; I have been watching and watching for you; and running down the lane, and looking out for you. I’ve set out a table under a beautiful tree behind the cottage; and I’ve been gathering some of the most delicious strawberries, for I know you are fond of them⁠—and we have such excellent cream⁠—and everything is so sweet and still here⁠—Oh!”⁠—said she, putting her arm within his, and looking up brightly in his face, “Oh, we shall be so happy!”</p>
 			<p>Poor Leslie was overcome.⁠—He caught her to his bosom⁠—he folded his arms round her⁠—he kissed her again and again⁠—he could not speak, but the tears gushed into his eyes; and he has often assured me, that though the world has since gone prosperously with him, and his life has, indeed, been a happy one, yet never has he experienced a moment of more exquisite felicity.</p>
-		</section>
+		</article>
 	</body>
 </html>
