--- a/src/epub/text/rural-life-in-england.xhtml
+++ b/src/epub/text/rural-life-in-england.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="rural-life-in-england" epub:type="volume se:short-story">
+		<article id="rural-life-in-england" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">Rural Life in England</h2>
 				<blockquote epub:type="epigraph z3998:poem">
@@ -71,6 +71,6 @@
 					<span>Smiles, though ’tis looking only at the sky.<a href="endnotes.xhtml#note-3" id="noteref-3" epub:type="noteref">3</a></span>
 				</p>
 			</blockquote>
-		</section>
+		</article>
 	</body>
 </html>
