--- a/src/epub/text/the-country-church.xhtml
+++ b/src/epub/text/the-country-church.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-country-church" epub:type="volume se:short-story">
+		<article id="the-country-church" epub:type="se:short-story">
 			<header>
 				<h2 epub:type="title">The Country Church</h2>
 				<blockquote epub:type="epigraph z3998:poem">
@@ -39,6 +39,6 @@
 			<p>The old gentleman was the only one really attentive to the service. He took the whole burden of family devotion upon himself; standing bolt upright, and uttering the responses with a loud voice that might be heard all over the church. It was evident that he was one of these thorough Church-and-king men, who connect the idea of devotion and loyalty; who consider the Deity, somehow or other, of the government party, and religion “a very excellent sort of thing, that ought to be countenanced and kept up.”</p>
 			<p>When he joined so loudly in the service, it seemed more by way of example to the lower orders, to show them that, though so great and wealthy, he was not above being religious; as I have seen a turtle-fed alderman swallow publicly a basin of charity soup, smacking his lips at every mouthful and pronouncing it “excellent food for the poor.”</p>
 			<p>When the service was at an end, I was curious to witness the several exits of my groups. The young noblemen and their sisters, as the day was fine, preferred strolling home across the fields, chatting with the country people as they went. The others departed as they came, in grand parade. Again were the equipages wheeled up to the gate. There was again the smacking of whips, the clattering of hoofs, and the glittering of harness. The horses started off almost at a bound; the villagers again hurried to right and left; the wheels threw up a cloud of dust, and the aspiring family was rapt out of sight in a whirlwind.</p>
-		</section>
+		</article>
 	</body>
 </html>
